# bevy-games

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
common/: Cargo.toml
common/src/: lib.rs
common/src/components/: mod.rs
common/src/resources/: mod.rs
common/src/systems/: mod.rs
common/src/utils/: mod.rs
games/: README.md
games/breakout/: Cargo.toml
games/breakout/src/: main.rs
games/hello-bevy/: Cargo.toml
games/hello-bevy/src/: main.rs
