[workspace]
resolver = "2"
members = [
    "common",
    "games/*",
]

[workspace.package]
edition = "2021"
rust-version = "1.79.0"
license = "MIT OR Apache-2.0"
authors = ["Your Name <your.email@example.com>"]

[workspace.dependencies]
bevy = "0.14"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
codegen-units = 1