[package]
name = "bevy-games-common"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
bevy = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[lib]
name = "bevy_games_common"
path = "src/lib.rs"